--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -57,3 +57,34 @@
     top: -8px;
     right: -8px;
 }
+
+@media(max-width:980px){
+    .navbar .logo{
+        width: 120px;
+    }
+
+    .navbar-menu{
+        grid-area: 15px;
+        font-size: 16px;
+    }
+
+    .navbar-right{
+        gap: 20px;
+    }
+
+    .navbar-right img{
+        width: 20px;
+    }
+
+    .navbar-right button{
+        padding: 7px 20px;
+        font-size: 15px;
+    }
+}
+
+@media(max-width:750px){
+    .navbar-menu{
+        display: none;
+    }
+
+}
