--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -54,3 +54,17 @@
     border: 4px solid tomato;
     padding: 2px;
 }
+
+@media(max-width:750px){
+    .explore-menu-text{
+        max-width: 100%;
+    }
+
+    .explore-menu-list-item img{
+        width: 15.5vw;
+        min-height: 80px;
+        cursor: pointer;
+        border-radius: 50%;
+        transition: 0.2s;
+    }
+}
