--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -24,6 +24,10 @@
     gap: 40px;
 }
 
+.navbar-right img{
+    cursor: pointer;
+}
+
 .navbar button{
     background: transparent;
     font-size: 16px;
@@ -56,6 +60,48 @@
     border-radius: 8px;
     top: -8px;
     right: -8px;
+}
+
+.navbar-profile{
+    position: relative;
+}
+
+.navbar-profile img{
+    cursor: pointer;
+}
+
+.nav-profile-dropdown{
+    position: absolute;
+    display: none;
+    right: 0;
+    z-index: 1;
+}
+
+.navbar-profile:hover .nav-profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff;
+    padding: 12px 25px;
+    border-radius: 4px;
+    border: 1px solid tomato;
+    outline: 2px solid #fff;
+    list-style: none;
+}
+
+.nav-profile-dropdown li{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.nav-profile-dropdown img{
+    width: 20px;
+}
+
+.nav-profile-dropdown li:hover{
+    color: tomato;
 }
 
 @media(max-width:980px){
